<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Error loading data</string>
    <string name="error_remove">Error remove post</string>
    <string name="error_like">Error like post</string>
    <string name="save">Save</string>
    <string name="check_new_posts">Check new posts</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="error_save">Error save</string>
    <string name="description_photo_post">Photo post attachment</string>
    <string name="image_pick_error">Image pick error</string>
    <string name="logout">logout</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="login_text">Login</string>
    <string name="password_text">Password</string>
    <string name="please_auth">Please, sign in</string>
    <string name="name_auth">Name</string>
    <string name="passw_conf_auth">Password confirmation</string>
    <string name="register">Register</string>
    <string name="passw_dont_match">The passwords don\'t match</string>
    <string name="exit_confirmation">Exit confirmation</string>
    <string name="you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="auth_error">Authorization error, this user may already exist</string>
    <string name="registration_error">Registration error, this user may already be registered</string>
    <string name="image_ad">Image ad</string>
    <string name="unknown_item_type">Unknown item type</string>
    <string name="unknown_view_type">Unknown view type</string>
</resources>